unpackaged/main/default/objects/tspa__SessionLobbyConfig__c/tspa__SessionLobbyConfig__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>VRA - Session Lobby Config</label>
</CustomObject>