unpackaged/main/default/objects/tspa__SessionLobbyConfig__c/fields/tspa__Description__c.field-meta.xml
<CustomField>
    <fullName>tspa__Description__c</fullName>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>