unpackaged/main/default/objects/tspa__SessionLobbyConfig__c/fields/tspa__French_Value__c.field-meta.xml
<CustomField>
    <fullName>tspa__French_Value__c</fullName>
    <label>French Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>