unpackaged/main/default/objects/tspa__SessionLobbyConfig__c/fields/tspa__Label__c.field-meta.xml
<CustomField>
    <fullName>tspa__Label__c</fullName>
    <label>Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>