unpackaged/main/default/objects/tspa__SessionLobbyConfig__c/fields/tspa__Russian_Value__c.field-meta.xml
<CustomField>
    <fullName>tspa__Russian_Value__c</fullName>
    <label>Russian Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>