unpackaged/main/default/objects/tspa__SessionLobbyConfig__c/fields/tspa__Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>tspa__Sort_Order__c</fullName>
    <label>Sort Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>