unpackaged/main/default/objects/tspa__SessionLobbyConfig__c/fields/tspa__Value__c.field-meta.xml
<CustomField>
    <fullName>tspa__Value__c</fullName>
    <label>English Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>